force-app/main/default/objects/QuoteLineItem/fields/Dx_Ref_Nr_or_internal_item_number__c.field-meta.xml
<CustomField>
    <fullName>Dx_Ref_Nr_or_internal_item_number__c</fullName>
    <formula>Product2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dx Ref. Nr. (or internal item number)</label>
    <type>Text</type>
</CustomField>