force-app/main/default/objects/QuoteLineItem/fields/Integration_Description__c.field-meta.xml
<CustomField>
    <fullName>Integration_Description__c</fullName>
    <description>This field references the Product&apos;s Integration Description value.</description>
    <formula>Product2.Integration_Description__c</formula>
    <label>Integration Description</label>
    <type>Text</type>
</CustomField>