force-app/main/default/objects/QuoteLineItem/fields/Is_Medical_Advice_Number_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_Medical_Advice_Number_Product__c</fullName>
    <formula>Product2.Is_Medical_Advice_Numbered_Product__c</formula>
    <label>Is Medical Advice Number Product</label>
    <type>Checkbox</type>
</CustomField>