force-app/main/default/objects/QuoteLineItem/fields/Medical_Advice_Feature_Code__c.field-meta.xml
<CustomField>
    <fullName>Medical_Advice_Feature_Code__c</fullName>
    <description>This field will record the medical advice feature code from Opportunity line item.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Medical Advice Feature Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>