force-app/main/default/objects/QuoteLineItem/fields/Medical_Advice_Number__c.field-meta.xml
<CustomField>
    <fullName>Medical_Advice_Number__c</fullName>
    <formula>Product2.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medical Advice Number</label>
    <type>Text</type>
</CustomField>