force-app/main/default/objects/QuoteLineItem/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <formula>Product2.Integration_Description__c</formula>
    <label>Description</label>
    <type>Text</type>
</CustomField>