force-app/main/default/objects/QuoteLineItem/fields/Quote_Line_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Item_Number__c</fullName>
    <label>Position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>