force-app/main/default/objects/QuoteLineItem/validationRules/DE_Cannot_Alter_Prods_For_Rejected_Quote.validationRule-meta.xml
<ValidationRule>
    <fullName>DE_Cannot_Alter_Prods_For_Rejected_Quote</fullName>
    <active>true</active>
    <description>If the Quote is not in Draft or Approved status then the Products cannot be altered</description>
    <errorConditionFormula>AND (	
Quote.RecordType.DeveloperName = &apos;DE_Quote&apos;,	
	NOT(OR( 
		$Profile.Name = &quot;System Administrator&quot;, 
		$Profile.Name = &quot;Data Integrator&quot;
	)),
	ISPICKVAL(Quote.Status, &apos;Rejected&apos;),
	OR(
		ISCHANGED(UnitPrice),
		ISCHANGED(Quantity)
	)
)</errorConditionFormula>
    <errorMessage>Products cannot be altered.</errorMessage>
</ValidationRule>